Move Node and Parameter to explicit PK String